--- a/docs/checkpoints/5/k8s/deployment.yaml
+++ b/docs/checkpoints/5/k8s/deployment.yaml
@@ -15,7 +15,7 @@ spec:
       containers:
           - name: db
             image: 'postgres:latest'
-            imagePullPolicy: IfNotPresent
+            imagePullPolicy: Always
             ports:
               - containerPort: 5432
             resources:
