--- a/docs/checkpoints/5/k8s/deployment.yaml
+++ b/docs/checkpoints/5/k8s/deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
           - name: postgres
-            image: 'postgres:latest'
+            image: postgres:latest
             imagePullPolicy: Always
             ports:
               - containerPort: 5432
