--- a/docs/checkpoints/5/k8s/deployment.yaml
+++ b/docs/checkpoints/5/k8s/deployment.yaml
@@ -20,11 +20,11 @@ spec:
               - containerPort: 5432
             resources:
               requests:
-                memory: "1Gi"
-                cpu: "0.1"
+                memory: "256Mi"
+                cpu: "250m"
               limits:
-                memory: "1.5Gi"
-                cpu: "0.5"
+                memory: "512Mi"
+                cpu: "500m"
             env:
               - name: POSTGRES_DB
                 valueFrom:
