--- a/api/.gitignore
+++ b/api/.gitignore
@@ -1,11 +1,1 @@
-account/
-account-service/
-auth/
-auth-service/
-product/
-product-service/
-order/
-order-service/
-gateway-service/
-exchange-service/
-asddft
+.env
