--- a/api/k8s/account-service.yaml
+++ b/api/k8s/account-service.yaml
@@ -2,6 +2,8 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: account
+  labels:
+    app: account
 spec:
   replicas: 1
   selector:
@@ -13,47 +15,29 @@ spec:
         app: account
     spec:
       containers:
-        - name: account
-          image: gabrielfmendesm/account:latest
-          imagePullPolicy: Always
-          ports:
-            - containerPort: 8080
-          resources:
-            requests:
-              memory: "200Mi"
-              cpu: "50m"
-            limits:
-              memory: "300Mi"
-              cpu: "200m"
-          env:
-            # Host do Postgres (lê do ConfigMap)
-            - name: DATABASE_HOST
-              valueFrom:
-                configMapKeyRef:
-                  name: postgres-configmap
-                  key: POSTGRES_HOST
-            # Porta do Postgres (pode usar default 5432)
-            - name: DATABASE_PORT
-              value: "5432"
-            # Nome do banco (se quiser puxar do ConfigMap, remova `/store` do app.yaml e use isto:
-            # - name: DATABASE_NAME
-            #     valueFrom:
-            #       configMapKeyRef:
-            #         name: postgres-configmap
-            #         key: POSTGRES_DB
-            # Por enquanto você pode deixar fixo no application.yaml do account (/store).
-            # Usuário do Postgres (do Secret)
-            - name: DATABASE_USER
-              valueFrom:
-                secretKeyRef:
-                  name: postgres-secrets
-                  key: POSTGRES_USER
-            # Senha do Postgres (do Secret)
-            - name: DATABASE_PASSWORD
-              valueFrom:
-                secretKeyRef:
-                  name: postgres-secrets
-                  key: POSTGRES_PASSWORD
+      - name: account
+        image: store-account:latest
+        imagePullPolicy: IfNotPresent
+        ports:
+        - containerPort: 8080
+        env:
+        - name: DATABASE_HOST
+          value: postgres
+        - name: DATABASE_PORT
+          value: "5432"
+        - name: DATABASE_NAME
+          value: store
+        - name: DATABASE_USER
+          value: store
+        - name: DATABASE_PASSWORD
+          value: store
+        resources:
+          requests:
+            cpu: "50m"
+            memory: "200Mi"
+          limits:
+            cpu: "200m"
+            memory: "300Mi"
 ---
 apiVersion: v1
 kind: Service
@@ -62,9 +46,10 @@ metadata:
   labels:
     app: account
 spec:
-  type: ClusterIP
-  ports:
-    - port: 80
-      targetPort: 8080
+  type: NodePort
   selector:
     app: account
+  ports:
+  - port: 8080
+    targetPort: 8080
+    nodePort: 30081
