--- a/api/k8s/order-service.yaml
+++ b/api/k8s/order-service.yaml
@@ -2,6 +2,8 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: order
+  labels:
+    app: order
 spec:
   replicas: 1
   selector:
@@ -13,40 +15,29 @@ spec:
         app: order
     spec:
       containers:
-        - name: order
-          image: gabrielfmendesm/order:latest
-          imagePullPolicy: Always
-          ports:
-            - containerPort: 8080
-          resources:
-            requests:
-              memory: "200Mi"
-              cpu: "50m"
-            limits:
-              memory: "300Mi"
-              cpu: "200m"
-          env:
-            # Host do Postgres
-            - name: DATABASE_HOST
-              valueFrom:
-                configMapKeyRef:
-                  name: postgres-configmap
-                  key: POSTGRES_HOST
-            # Porta do Postgres
-            - name: DATABASE_PORT
-              value: "5432"
-            # Usuário do Postgres (Secret)
-            - name: DATABASE_USER
-              valueFrom:
-                secretKeyRef:
-                  name: postgres-secrets
-                  key: POSTGRES_USER
-            # Senha do Postgres (Secret)
-            - name: DATABASE_PASSWORD
-              valueFrom:
-                secretKeyRef:
-                  name: postgres-secrets
-                  key: POSTGRES_PASSWORD
+      - name: order
+        image: store-order:latest
+        imagePullPolicy: IfNotPresent
+        ports:
+        - containerPort: 8080
+        env:
+        - name: DATABASE_HOST
+          value: postgres
+        - name: DATABASE_PORT
+          value: "5432"
+        - name: DATABASE_NAME
+          value: store
+        - name: DATABASE_USER
+          value: store
+        - name: DATABASE_PASSWORD
+          value: store
+        resources:
+          requests:
+            cpu: "50m"
+            memory: "200Mi"
+          limits:
+            cpu: "200m"
+            memory: "300Mi"
 ---
 apiVersion: v1
 kind: Service
@@ -55,9 +46,10 @@ metadata:
   labels:
     app: order
 spec:
-  type: ClusterIP
-  ports:
-    - port: 80
-      targetPort: 8080
+  type: NodePort
   selector:
     app: order
+  ports:
+  - port: 8080
+    targetPort: 8080
+    nodePort: 30082
