--- a/api/k8s/product-service.yaml
+++ b/api/k8s/product-service.yaml
@@ -2,6 +2,8 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: product
+  labels:
+    app: product
 spec:
   replicas: 1
   selector:
@@ -13,39 +15,29 @@ spec:
         app: product
     spec:
       containers:
-        - name: product
-          image: gabrielfmendesm/product:latest
-          imagePullPolicy: Always
-          ports:
-            - containerPort: 8080
-          resources:
-            requests:
-              memory: "200Mi"
-              cpu: "50m"
-            limits:
-              memory: "300Mi"
-              cpu: "200m"
-          env:
-            # Host do Postgres
-            - name: DATABASE_HOST
-              valueFrom:
-                configMapKeyRef:
-                  name: postgres-configmap
-                  key: POSTGRES_HOST
-            # Porta do Postgres
-            - name: DATABASE_PORT
-              value: "5432"
-            # Usuário e senha do Postgres (do Secret)
-            - name: DATABASE_USER
-              valueFrom:
-                secretKeyRef:
-                  name: postgres-secrets
-                  key: POSTGRES_USER
-            - name: DATABASE_PASSWORD
-              valueFrom:
-                secretKeyRef:
-                  name: postgres-secrets
-                  key: POSTGRES_PASSWORD
+      - name: product
+        image: store-product:latest
+        imagePullPolicy: IfNotPresent
+        ports:
+        - containerPort: 8080
+        env:
+        - name: DATABASE_HOST
+          value: postgres
+        - name: DATABASE_PORT
+          value: "5432"
+        - name: DATABASE_NAME
+          value: store
+        - name: DATABASE_USER
+          value: store
+        - name: DATABASE_PASSWORD
+          value: store
+        resources:
+          requests:
+            cpu: "50m"
+            memory: "200Mi"
+          limits:
+            cpu: "200m"
+            memory: "300Mi"
 ---
 apiVersion: v1
 kind: Service
@@ -54,9 +46,10 @@ metadata:
   labels:
     app: product
 spec:
-  type: ClusterIP
-  ports:
-    - port: 80
-      targetPort: 8080
+  type: NodePort
   selector:
     app: product
+  ports:
+  - port: 8080
+    targetPort: 8080
+    nodePort: 30083
