--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -19,7 +19,7 @@ nav:
       - Minikube: individual/minikube.md
       - Bottlenecks:
           - Caching: individual/bottlenecks/cache.md
-          - Prometheus + Grafana: individual/bottlenecks/
+          - Prometheus + Grafana: individual/bottlenecks/grafana-prometheus.md
 
 markdown_extensions:
   - admonition
